--- a/ReadMe - Commodity Index Comparison.qmd
+++ b/ReadMe - Commodity Index Comparison.qmd
@@ -324,7 +324,11 @@ runWB_API <- FALSE
 
 if (runWB_API){
 
-download.file("https://thedocs.worldbank.org/en/doc/5d903e848db1d1b83e0ec8f744e55570-0350012021/related/CMO-Historical-Data-Monthly.xlsx",sprintf("%sCMO-Historical-Data-Monthly.xlsx",folder_Raw))
+#(old) download.file("https://thedocs.worldbank.org/en/doc/5d903e848db1d1b83e0ec8f744e55570-0350012021/related/CMO-Historical-Data-Monthly.xlsx",sprintf("%sCMO-Historical-Data-Monthly.xlsx",folder_Raw))
+
+  download.file("https://thedocs.worldbank.org/en/doc/18675f1d1639c7a34d463f59263ba0a2-0050012025/related/CMO-Historical-Data-Monthly.xlsx",sprintf("%sCMO-Historical-Data-Monthly.xlsx",folder_Raw))
+  
+  
   
 }
 
@@ -508,7 +512,7 @@ wb_final <- wb03a %>%
 
 
 rm(wb_I01,wb_I02,wb_I03,wb_I04,
-   wb_P01,wb_P02,wb_P03,wb01,wb02,wb03a,wb03b,wb03c)
+   wb_P01,wb_P02,wb_P03,wb01,wb03a,wb03b,wb03c)
 rm(pink_sheet_cMap,pink_sheet_iMap)
 ```
 
